@@ -1,3 +1,15 @@
+2008-04-16  Johannes Schmid  <jhs@gnome.org>
+	
+	Patch from Ignacio Casal Quinteiro:
+	* plugins/file-loader/anjuta-recent-chooser-menu.c
+	(anjuta_recent_chooser_menu_insert_item),
+	(anjuta_recent_chooser_menu_populate):
+	* plugins/file-loader/plugin.c (activate_plugin):
+	Fix recent files in the toolbar
+	
+	* plugins/tools/plugin.c (ipreferences_merge):
+	Fixed some warnings
+
 2008-04-13  Sébastien Granjoux  <seb.sfo@free.fr>
 
 	* libanjuta/anjuta-preferences.c: Fixed a typo in the previous patch
